--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -47,7 +47,7 @@ build_script:
       Update-AppveyorBuild -Version "ponyc-$package_version-$package_iteration"
   - cd C:\projects\ponyc
   - python -x waf configure
-  - python -x waf build --config %configuration% --llvm %llvm%
+  - python -x waf build --config %configuration% --llvm %llvm% --etw
   - ps: |
       $ponydir = "${env:appveyor_build_version}-win64"
       cd C:\projects\ponyc
@@ -85,4 +85,5 @@ deploy:
 
 test_script:
   - cd C:\projects\ponyc
-  - python -x waf test --config %configuration% --llvm %llvm%
+  - python -x waf test --config %configuration% --llvm %llvm% --etw
+
